# jitkasi

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: bumpversion.yml
0.0.0/: 404.html  index.html  sitemap.xml
0.0.0/reference/SUMMARY/: index.html
0.0.0/search/: search_index.json
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/reference/SUMMARY/: index.html
0.1.0/reference/tod/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/reference/SUMMARY/: index.html
0.2.0/reference/noise/: index.html
0.2.0/reference/tod/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/reference/SUMMARY/: index.html
0.3.0/reference/noise/: index.html
0.3.0/reference/solutions/: index.html
0.3.0/reference/tod/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/reference/SUMMARY/: index.html
0.4.0/reference/noise/: index.html
0.4.0/reference/solutions/: index.html
0.4.0/reference/tod/: index.html
0.4.0/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/reference/SUMMARY/: index.html
0.5.0/reference/mapmaking/: index.html
0.5.0/reference/noise/: index.html
0.5.0/reference/solutions/: index.html
0.5.0/reference/tod/: index.html
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/reference/SUMMARY/: index.html
0.5.1/reference/mapmaking/: index.html
0.5.1/reference/noise/: index.html
0.5.1/reference/solutions/: index.html
0.5.1/reference/tod/: index.html
0.5.1/search/: search_index.json
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/search/: search_index.json
0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0/search/: search_index.json
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0/search/: search_index.json
0.9.0/: 404.html  index.html  sitemap.xml
0.9.0/search/: search_index.json
0.9.1/: 404.html  index.html  objects.inv  sitemap.xml
0.9.1/search/: search_index.json
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/search/: search_index.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/search/: search_index.json
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/search/: search_index.json
2.0.2/: 404.html  index.html  sitemap.xml
2.0.2/search/: search_index.json
2.0.3/: 404.html  index.html  sitemap.xml
2.0.4/: 404.html  index.html  sitemap.xml
2.0.4/search/: search_index.json
2.1.0/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
2.1.0/search/: search_index.json
jitkasi/: __init__.py  mapmaking.py  math.py  noise.py  solutions.py  tod.py
jitkasi/solutions/: __init__.py  core.py  map.py  maps.py
(+76 files in other folders)
