[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="jitkasi"
version="2.0.4"
authors= [
{name ="Saianeesh Keshav Haridas"},
]
description = "Maximum likelihood mapmaker using JAX"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mapmaking", "CMB", "MUSTANG2", "jax", "minkasi"]
license = {text = "GPLv3"}
classifiers = [ "Programming Language :: Python" ]
dependencies = ["numpy", "astropy", "jax==0.8.2", "jaxlib==0.8.2", "cython", "mpi4py", "mpi4jax>=0.8.1"]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-homepage-copier",
]

[tool.setuptools]
packages=["jitkasi"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
